
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct fat_header {int nfat_arch; int cputype; int magic; } ;
struct fat_arch {int nfat_arch; int cputype; int magic; } ;
typedef int fat_header ;


 int CPU_TYPE_I386 ;
 int FAT_MAGIC ;
 size_t MAXNUM0 ;
 int O_CREAT ;
 int O_RDWR ;
 int S_IXUSR ;
 struct fat_header* calloc (size_t,int) ;
 int close (int) ;
 int err (int,char*) ;
 int fchmod (int,int ) ;
 int free (struct fat_header*) ;
 int memset (struct fat_header*,int ,int) ;
 int open (char*,int) ;
 int write (int,struct fat_header*,int) ;

void CraftBinary(char *name)
{
  struct fat_header fat_header;
  struct fat_arch *arches;
  size_t i;
  int fd;

  memset(&fat_header, 0, sizeof(fat_header));
  fat_header.magic = FAT_MAGIC;
  fat_header.nfat_arch = 4096;

  if ((arches = calloc(MAXNUM0, sizeof(struct fat_arch))) == ((void*)0))
    err(-1, "calloc");
  for (i = 0; i < MAXNUM0; i++)
    arches[i].cputype = CPU_TYPE_I386;

  if ((fd = open(name, O_CREAT|O_RDWR)) == -1)
    err(-1, "open");
  if (write(fd, &fat_header, sizeof(fat_header)) == -1)
    err(-1, "write");
  if (write(fd, arches, sizeof(struct fat_arch) * MAXNUM0) == -1)
    err(-1, "write");
  if (fchmod(fd, S_IXUSR) == -1)
    err(-1, "fchmod");
  close(fd);
  free(arches);
}
